# rust-optimizations-benchmark

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/base64/: mod.rs
src/brainfuck/: mod.rs
src/json/: file.json  json_pull.rs  json_struct.rs  json_value.rs  mod.rs
src/matmul/: mod.rs
src/primes/: mod.rs
