[package]
name = "rust-optimizations-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21.0" }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.81" }

[profile.dev]
debug = false
split-debuginfo = "unpacked"
incremental = true
overflow-checks = false
opt-level = 0

[profile.release-light]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 1
strip = true
incremental = false

[profile.release-medium]
inherits = "release-light"
lto = "thin"
codegen-units = 8
opt-level = 2

[profile.release-extreme]
inherits = "release-medium"
lto = true
codegen-units = 1
opt-level = 3
